gitops/apps/monitoring/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.cyberpartners.dk`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
    - match: Host(`prometheus.cyberpartners.dk`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
    - match: Host(`loki.cyberpartners.dk`)
      kind: Rule
      services:
        - name: loki
          port: 3100
  tls:
    secretName: monitoring-tls
